version 1.9.13, in progress
- Add Catalan translation
- "adf" command: add option to optimize the lag order using
  the procedure recommended by Ng and Perron (2001), and 
  make the MAIC method the default
- Improve internals of pprintf() -- handle big string args
  properly
- Fix a few small GUI memory leaks
- Linux and Windows: add check for multiple instances of
  gretl, and choice to open a double-clicked file in the
  prior gretl instance, if any
- Fix bug: "catch" not working properly when applied to
  genr expressions within loops

2013-03-15 version 1.9.12
- Officially increase the maximum length of variable names
  to 31 characters
- "foreign" command: add support for Python + NumPy
- "markers" command: add support for the panel-data case
  where the number of markers equals the number of cross-
  sectional units
- "delete" command: add option to delete all variables of a
  specified type
- "qlrtest" command: compute asymptotic p-value as per Bruce
  Hansen's method (1997)
- "modeltab" command: add --output option to direct the model
  table to a specified file
- $xlist accessor: make available for system estimators
- You can now use "bundle b = null" to create a new bundle or
  empty an existing one
- Enable more streamlined syntax for setting and accessing
  objects within bundles, as in bundle.member
- Add new string function strstrip()
- Add new data-manipulation function aggregate()
- Add new function quadtable(), for Gauss quadrature
- Add new function remove(), for file deletion
- lags() function: add an optional third parameter to control
  the ordering of terms in the output list
- mread() and mwrite() functions: add an optional argument to
  direct read/write to the user's "dot directory"
- Add accessors $obsmajor and $obsminor to get series holding
  (for example) year and month; also $obsmicro for daily data
- Improve structural integrity of model specification dialog
  (it now behaves properly on resizing)