@@ -1,6 +1,7 @@
 # Set of available languages.
 # ja
 # rw
+bg
 ca
 cs
 de
