@@ -5,7 +5,8 @@ vpath %.po ../../po
 %.mo: %.po
 	$(WIN32_MSGFMT) -o $@ $<
 
-all: de.mo el.mo es.mo eu.mo fr.mo it.mo pl.mo ru.mo rw.mo tr.mo pt.mo pt_BR.mo zh_TW.mo cs.mo sq.mo ca.mo
+all: de.mo el.mo es.mo eu.mo fr.mo it.mo pl.mo ru.mo rw.mo tr.mo pt.mo \
+	pt_BR.mo zh_TW.mo cs.mo sq.mo ca.mo bg.mo
 
 clean:
 	rm -f *.mo
